# op-link-fixer

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  app.py  manifest.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
deploy/: deployment.example.yaml
tests/: test_app.py  test_wiring.py
